[gd_scene load_steps=11 format=1]

[ext_resource path="res://scripts/ball.gd" type="Script" id=1]
[ext_resource path="res://assets/game/tail_particle.png" type="Texture" id=2]
[ext_resource path="res://assets/game/ball.png" type="Texture" id=3]
[ext_resource path="res://assets/game/hit_particle.png" type="Texture" id=4]
[ext_resource path="res://assets/sound/sfx/bump.wav" type="Sample" id=5]
[ext_resource path="res://assets/sound/sfx/tink.wav" type="Sample" id=6]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 8.0

[sub_resource type="ColorRamp" id=2]

offsets = FloatArray( 0, 0.654971, 1 )
colors = ColorArray( 0.164706, 0.301961, 0.756863, 1, 0.164706, 0.301961, 0.756863, 1, 0.164706, 0.301961, 0.756863, 0 )

[sub_resource type="ColorRamp" id=3]

offsets = FloatArray( 0, 0.666667, 1 )
colors = ColorArray( 0.768627, 0.168627, 0.258824, 1, 0.768627, 0.168627, 0.258824, 1, 0.768627, 0.168627, 0.258824, 0 )

[sub_resource type="SampleLibrary" id=4]

samples/bump = {
"db": -12.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/tink = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}

[node name="ball" type="Area2D"]

z/z = -1
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="particle_trail" type="Particles2D" parent="."]

z/z = -2
config/amount = 150
config/lifetime = 1.0
config/process_mode = 1
config/local_space = false
config/texture = ExtResource( 2 )
params/direction = 0.0
params/spread = 0.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.75
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 3 )

[node name="ball_collider" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -8, -8, 16, 16 )

[node name="blue_particles" type="Particles2D" parent="."]

z/z = -2
config/amount = 8
config/lifetime = 1.5
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/local_space = false
config/explosiveness = 0.01
config/texture = ExtResource( 4 )
params/direction = 180.0
params/spread = 60.0
params/linear_velocity = 100.0
params/spin_velocity = 1.3
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 50.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 0.5
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 0.53
randomness/damping = 0.24
randomness/initial_size = 0.3
color/color_ramp = SubResource( 2 )

[node name="red_particles" type="Particles2D" parent="."]

z/z = -2
config/amount = 8
config/lifetime = 1.5
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/local_space = false
config/explosiveness = 0.01
config/texture = ExtResource( 4 )
params/direction = 180.0
params/spread = 60.0
params/linear_velocity = 100.0
params/spin_velocity = 1.3
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 50.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 0.5
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 0.53
randomness/damping = 0.24
randomness/initial_size = 0.3
color/color_ramp = SubResource( 3 )

[node name="death_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="sound" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="power_particles" type="Particles2D" parent="."]

z/z = -1
config/amount = 2
config/lifetime = 2.5
config/time_scale = 4.0
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 32, 32 )
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 0.0
params/spin_velocity = 1.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = -10.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.0
params/final_size = 0.1
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0
emission_points = Vector2Array( -0.5625, -0.84375, -1, 0.15625, 0.5, 0.84375, -0.71875, 0.71875, 0.1875, 0.96875, 0.96875, 0.15625, -0.28125, 0.9375, 0.59375, 0.78125, 0.96875, 0.1875, 0.375, 0.90625, 0.96875, -0.1875, 0.5, -0.875, 0, 0.96875, -0.8125, 0.59375, 0.90625, -0.4375, 0.96875, 0.09375, -0.90625, 0.4375, 0.375, 0.90625, -0.96875, -0.3125, -0.9375, -0.375, 0.8125, 0.53125, -0.0625, 0.96875, -1, 0.09375, 0.875, 0.46875, -0.8125, -0.59375, -0.78125, 0.65625, -1, 0.03125, -0.90625, 0.46875, 0.90625, 0.40625, 0.4375, 0.875, -1, 0, 0.3125, 0.9375, 0.75, -0.65625, -1, 0.15625, -1, 0.125, 0.59375, -0.8125, 0.15625, 0.96875, -0.28125, -0.96875, -0.8125, 0.59375, -1, -0.21875, -1, -0.15625, 0.96875, 0.1875, 0.59375, 0.78125, 0.9375, -0.28125, -0.5, 0.875, 0.84375, -0.53125, -0.25, 0.96875, -0.96875, 0.25, 0.9375, -0.34375, -0.9375, 0.40625, 0.75, 0.625, 0.65625, 0.71875, 0.25, -0.96875, 0.3125, 0.9375, 0.59375, -0.8125, 0.9375, -0.34375, 0.90625, -0.40625, -0.34375, 0.9375, 0.9375, -0.3125, -0.75, 0.6875, -0.5625, 0.8125, -0.625, -0.8125, 0.90625, 0.34375, 0.28125, 0.9375, -0.53125, -0.875, -0.78125, 0.625, -0.25, 0.96875, -0.125, -1, -0.1875, -1, 0.46875, 0.84375, 0.1875, 0.96875, -0.0625, 0.96875, -0.59375, -0.84375, -0.875, -0.53125, -1, 0.03125, -0.6875, -0.75, -1, -0.21875, 0.96875, -0.0625, -0.59375, 0.8125, -0.4375, -0.9375, -0.96875, -0.25, 0.9375, -0.28125, 0.96875, 0.0625, -0.09375, 0.96875, -0.96875, 0.34375, 0.6875, -0.71875, 0, 0.96875, 0.875, -0.46875, 0.78125, -0.625, 0.96875, 0.03125, 0.15625, 0.96875, -0.09375, -1, -1, 0.125, 0.8125, 0.5625, -0.84375, 0.5625, -0.6875, 0.71875, -0.96875, -0.25, -0.09375, 0.96875, 0.4375, 0.875, 0.15625, -1, 0.5, -0.875, 0.34375, 0.90625, 0.3125, 0.9375, 0.59375, 0.78125, 0.375, 0.90625, 0.8125, -0.59375, -0.40625, 0.90625, -0.34375, 0.9375, 0.9375, -0.28125, 0.21875, -1, 0.40625, 0.875, 0.28125, 0.9375, 0.34375, -0.9375, 0.6875, -0.71875, 0.90625, -0.40625, 0.125, -1, 0.8125, -0.59375, -1, 0.21875, 0.8125, -0.59375, -0.5625, -0.84375, -0.625, 0.78125, -0.125, 0.96875, -0.1875, 0.96875, 0.8125, 0.53125, 0.125, 0.96875, 0.4375, -0.90625, -0.5, -0.90625, 0.25, 0.9375, -0.28125, -0.96875, -0.53125, 0.84375, 0.09375, -1, 0.90625, 0.40625, 0.5, -0.875, 0.96875, -0.1875, -0.84375, 0.5625, 0.1875, -1, -1, 0.21875, -0.15625, 0.96875, -1, 0, -0.0625, -1, 0.8125, -0.5625, 0.4375, 0.875, -0.40625, -0.9375, 0.1875, -1, 0.96875, -0.21875, -0.0625, 0.96875, 0.59375, 0.78125, 0.90625, -0.4375, -0.1875, -1, -0.65625, 0.75, -1, 0.03125, -0.28125, -0.96875, -0.875, -0.5, -0.4375, -0.9375, -0.09375, 0.96875, -1, 0.09375, -0.375, 0.90625, 0.8125, -0.59375, 0.96875, 0.09375, -0.96875, -0.3125, -1, 0.0625, 0.09375, -1, 0.6875, -0.71875, -0.65625, -0.78125, -0.71875, -0.71875, -0.09375, 0.96875, -0.96875, -0.3125, 0.71875, 0.65625, 0.96875, 0.21875, 0.90625, 0.40625, 0.1875, -1, -0.96875, -0.28125, -0.8125, -0.59375, 0.09375, -1, 0.15625, 0.96875, -1, -0.1875, 0, 0.96875, 0.03125, 0.96875, 0.90625, 0.40625, 0.40625, 0.875, 0.6875, 0.6875, 0.4375, 0.875, -0.78125, -0.65625, 0.375, 0.90625, 0.9375, -0.28125, 0.96875, 0.0625, -0.375, -0.9375, -0.34375, -0.96875, 0.90625, -0.4375, -1, -0.1875, 0.53125, -0.84375, 0.96875, -0.15625, 0.125, -1, -0.9375, 0.375, -0.90625, -0.4375, 0.96875, 0.21875, 0.28125, -0.96875, 0.78125, 0.59375, -0.625, 0.78125, 0.96875, -0.15625, -0.4375, -0.9375, -0.8125, 0.59375, -0.78125, 0.625, -0.25, 0.96875, -0.96875, 0.3125, -0.375, 0.90625, -0.125, -1, -0.90625, 0.46875, 0.1875, 0.96875, -0.0625, -1, 0.84375, -0.5, -0.9375, 0.40625, -0.34375, -0.96875, 0.3125, -0.96875, -0.59375, -0.84375, 0.59375, 0.78125, -0.21875, 0.96875, 0.84375, 0.5, -0.375, -0.9375, 0.90625, 0.375, 0.90625, -0.375, 0.03125, -1, -0.25, -1, -0.59375, 0.8125, 0.4375, -0.90625, -0.40625, -0.9375, 0.6875, 0.6875, -0.25, -1, 0.59375, 0.78125, 0.96875, 0, -0.71875, 0.71875, 0.9375, 0.28125, -0.5, 0.875, -0.8125, -0.59375, 0.21875, -1, 0.96875, -0.25, 0, 0.96875, 0.4375, 0.875, 0.53125, -0.84375, -0.21875, 0.96875, 0.875, -0.46875, -0.9375, 0.375, -0.65625, -0.78125, -0.25, 0.96875, -0.34375, -0.96875, 0.28125, -0.96875, -0.28125, 0.9375, 0.8125, -0.59375, -1, -0.03125, 0.09375, 0.96875, 0.875, 0.46875, -0.8125, -0.59375, -0.03125, 0.96875, 0.4375, -0.90625, -0.40625, 0.90625, 0.34375, 0.90625, 0.75, -0.65625, 0.96875, -0.15625, -1, 0.15625, 0.125, 0.96875, -1, -0.0625, 0.90625, -0.375, 0.96875, -0.15625, -0.25, 0.96875, -0.21875, 0.96875, 0.875, 0.46875, -0.125, 0.96875, 0.9375, -0.3125, -0.34375, -0.96875, 0.84375, -0.5, 0.78125, -0.625, -0.3125, -0.96875, -0.0625, 0.96875, 0.96875, -0.15625, -0.96875, -0.3125, -0.1875, -1, -0.46875, -0.90625, 0.90625, -0.4375, -1, 0.0625, 0.03125, 0.96875, -1, 0.125, -0.46875, 0.875, -0.34375, 0.9375, -0.625, 0.78125, -1, -0.15625, 0.40625, 0.875, 0.96875, -0.0625, 0.8125, 0.5625, -0.84375, -0.5625, -0.96875, 0.25, -0.96875, -0.28125, -0.125, 0.96875, 0.4375, -0.90625, 0.75, 0.625, 0.90625, -0.375, -0.15625, -1, -0.03125, 0.96875, -0.28125, -0.96875, -0.59375, 0.8125, -0.3125, 0.9375, -0.8125, -0.59375, 0.96875, 0.125, -0.125, -1, -0.90625, 0.4375, 0.15625, -1, 0.1875, -1, 0.96875, -0.1875, -1, -0.03125, -0.90625, 0.4375, -0.46875, 0.875, 0.875, -0.46875, 0.5625, -0.8125, -0.40625, -0.9375, 0.84375, -0.53125, 0.625, 0.75, -0.375, -0.9375, -0.96875, -0.34375, 0.03125, 0.96875, 0.71875, -0.6875, 0.28125, 0.9375, -1, 0.03125, 0.03125, -1, -1, -0.21875, -0.90625, -0.4375, 0.28125, 0.9375, 0.40625, 0.875, 0.96875, -0.0625, 0, -1, -0.15625, -1, -0.875, -0.5, 0.46875, -0.875, -0.625, -0.8125, 0.90625, -0.375, 0.03125, 0.96875, 0.96875, 0.1875, -0.875, -0.5, 0.65625, -0.75, 0.34375, -0.9375, -0.78125, 0.625, 0.21875, -1, -0.625, 0.78125, -0.90625, -0.46875, -0.875, 0.53125, -0.71875, 0.71875, 0.96875, 0.125, -0.90625, -0.46875, -0.96875, -0.28125, -0.625, -0.8125, 0.75, -0.65625, 0.8125, 0.5625, 0.9375, -0.28125, -0.3125, 0.9375, -0.71875, -0.71875, 0.9375, -0.34375, 0.5, 0.84375, 0, -1, -0.59375, -0.84375, 0.8125, 0.5625, 0.40625, 0.875, 0.8125, -0.59375, 0.125, -1, 0.78125, 0.59375, -0.34375, -0.96875, -0.8125, 0.59375, 0.53125, -0.84375, -0.5, -0.90625, 0.59375, -0.8125, -0.96875, 0.28125, -0.90625, 0.4375, -1, 0, 0.6875, 0.6875, 0, 0.96875, 0.03125, -1, 0.34375, 0.90625, 0.75, -0.65625, -0.03125, -1, -0.0625, -1, -0.90625, 0.4375, 0.21875, -1, 0.96875, 0.21875, -0.90625, -0.4375, 0.03125, -1, 0.25, 0.9375, 0.71875, -0.6875, 0.8125, 0.53125, 0.8125, -0.5625, -0.71875, 0.71875, -1, 0.15625, 0.125, -1, -0.5, -0.90625, 0.9375, -0.34375, 0.78125, 0.59375, 0.6875, 0.6875, 0.8125, -0.59375, 0.34375, 0.90625, 0.6875, -0.71875, -0.96875, -0.28125, 0.96875, -0.15625, -0.5625, -0.84375, 0.96875, 0.0625, -0.5, 0.875, -0.03125, 0.96875, 0.53125, -0.84375, -0.15625, 0.96875, 0.125, -1, 0.96875, 0.1875, 0.5, -0.875, 0.96875, -0.21875, -1, -0.03125, 0.0625, -1, 0.96875, 0.1875, 0.28125, -0.96875, -0.78125, 0.625, -0.03125, -1, 0.21875, -1, -1, -0.03125, 0.90625, 0.375, -0.96875, 0.3125, 0.875, -0.46875, -0.84375, 0.5625, -0.4375, -0.9375, 0.53125, -0.84375, -1, -0.03125, 0.90625, -0.375, 0.96875, -0.09375, 0.0625, -1, -0.03125, 0.96875, 0.9375, 0.25, -0.03125, -1, -0.875, -0.53125, 0.96875, 0.1875, -0.0625, 0.96875, -0.03125, 0.96875, -1, 0.09375, -0.09375, -1, 0.96875, -0.15625, 0.03125, -1, 0.40625, 0.875, 0.9375, 0.28125, 0.9375, 0.3125, -0.875, 0.53125, -0.53125, 0.84375, 0.375, -0.9375, -0.6875, 0.71875, 0.65625, 0.71875, -1, 0.21875, -1, 0.09375, -0.96875, -0.34375, -0.5625, 0.8125, -1, -0.15625, -0.46875, 0.875, 0.3125, 0.9375, -0.625, -0.8125, -0.125, 0.96875, -0.5, 0.875, 0.875, 0.4375, -0.0625, 0.96875, 0.3125, -0.96875, -0.40625, 0.90625, 0.96875, -0.09375, 0.9375, -0.3125, 0.6875, -0.71875, -1, 0.125, 0.125, -1, -0.09375, 0.96875, 0.8125, 0.53125, -0.125, 0.96875, -0.3125, 0.9375, 0.03125, -1, -0.3125, -0.96875, -0.90625, 0.4375, -0.1875, 0.96875, -0.65625, 0.75, -0.15625, -1, -0.9375, 0.375, 0.5, -0.875, -1, 0.1875, -0.375, -0.9375, 0.90625, -0.375, -0.34375, -0.96875, -0.1875, -1, 0.96875, -0.21875, 0.4375, -0.90625, -0.40625, -0.9375, 0.21875, 0.96875, -0.90625, 0.46875, -1, -0.0625, -0.4375, -0.9375, 0.96875, 0.125, -0.25, -1, 0.96875, -0.21875, 0.9375, 0.25, -1, -0.0625, -0.59375, -0.84375, -1, 0.0625, -0.96875, -0.3125, -0.4375, 0.90625, 0.96875, -0.0625, 0.96875, 0.15625, -0.6875, -0.75, -0.5625, 0.8125, 0.96875, 0.15625, -0.53125, 0.84375, 0.34375, -0.9375, 0.15625, -1, -0.5625, 0.8125, -0.03125, -1, -0.96875, 0.25, 0.96875, -0.09375, 0.71875, 0.65625, -0.9375, 0.375, -0.96875, 0.34375 )

[connection signal="area_enter" from="." to="." method="_on_ball_area_enter"]

[connection signal="exit_screen" from="VisibilityNotifier2D" to="." method="_on_ball_exit_screen"]

[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]


